--- a/src/styles/conteiners.css
+++ b/src/styles/conteiners.css
@@ -1,3 +1,21 @@
+/* Estilo del scrollbar */
+::-webkit-scrollbar {
+  width: 8px; /* Ancho del scrollbar */
+}
+
+/* Estilo del thumb (la parte arrastrable) */
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color del thumb */
+  border-radius: 6px; /* Borde redondeado del thumb */
+}
+
+/* Estilo de la pista (la parte no arrastrable) */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Color de la pista */
+}
+
+
+
 .titulo-post {
   text-align: center;
 }
@@ -18,6 +36,9 @@
   text-align: center;
   width: 350px;
   height: 350px;
+  position: relative;
+  overflow: auto;
+  
 }
 
 .botonPost {
@@ -32,3 +53,5 @@
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
+
+
