--- a/src/styles/conteiners.css
+++ b/src/styles/conteiners.css
@@ -28,7 +28,7 @@
 }
 
 .divPosts {
-  background-color: #441c79;
+  background-color: #8F7261;
   border: 1rem;
   border-radius: 30px;
   padding: 5px;
@@ -43,7 +43,7 @@
 
 .botonPost {
   padding: 10px 20px;
-  background-color: #441c79;
+  background-color: #8F7261;
   color: white;
   border: none;
   border-radius: 5px;
@@ -56,5 +56,7 @@
 
 .boton-comments{
   padding: 8px 16px;
+  background-color: #F3E9EC;
+  color: black;
 }
 
